--- a/packages/element-plus/package.json
+++ b/packages/element-plus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "element-plus",
+  "name": "@lhrdc/element-plus",
   "version": "0.0.0-dev.1",
   "description": "A Component Library for Vue 3",
   "keywords": [
@@ -108,5 +108,6 @@
     "> 1%",
     "not ie 11",
     "not op_mini all"
-  ]
+  ],
+  "gitHead": "c9b807a645d52a4fc2fc7db0192e82da"
 }
